--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10295,6 +10295,66 @@ button {
   border: none;
 }
 
+#theme {
+  background-color: #fff;
+  padding: 4;
+  position: fixed;
+  bottom: 20px;
+  border-radius: 50%;
+  right: 13px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+}
+#theme button {
+  padding: 10px;
+  border-radius: 50%;
+  background: #004444;
+  color: #fff;
+}
+#theme button i {
+  font-size: 20px;
+}
+#theme button img {
+  width: 30px;
+  height: auto;
+}
+
+#theme.theme-dark {
+  background-color: #004444;
+}
+#theme.theme-dark button {
+  background-color: #fff;
+  color: #004444;
+}
+
+#gotop {
+  background-color: #fff;
+  padding: 4;
+  display: none;
+  position: fixed;
+  bottom: 80px;
+  border-radius: 50%;
+  right: 14px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+}
+#gotop button {
+  padding: 12px 15px;
+  border-radius: 50%;
+  background: #004444;
+  color: #fff;
+}
+#gotop button i {
+  font-size: 20px;
+}
+
+#gotop.gotop-dark {
+  background-color: #004444;
+}
+#gotop.gotop-dark button {
+  padding: 15px 18px;
+  background-color: #fff;
+  color: #004444;
+}
+
 .loader {
   position: fixed;
   width: 100%;
@@ -10303,15 +10363,22 @@ button {
   margin: 0 auto;
   top: 0;
   left: 0;
-  padding-top: 14%;
-  padding-left: 45%;
+  padding: 14% 45%;
   z-index: 22;
 }
 
 @media (max-width: 767px) {
   .loader {
-    padding-top: 41%;
-    padding-left: 36%;
+    padding: 38% 35%;
+  }
+  #gotop, #theme {
+    right: 7px;
+  }
+  #gotop button {
+    padding: 9px 12px;
+  }
+  #gotop.gotop-dark button {
+    padding: 12px 16px;
   }
 }
 header {
@@ -10393,8 +10460,13 @@ header .navbar {
   border-bottom: 6px solid #0097e6;
 }
 header .navbar .navbar-brand img {
-  width: 50px;
+  width: 150px;
   height: auto;
+}
+header .navbar .navbar-toggler {
+  padding: 9px;
+  border: 1px solid #0097e6;
+  background-color: #212529;
 }
 header .navbar form #dark_mode {
   font-size: 1.5rem;
@@ -10425,7 +10497,7 @@ header .navbar #hide {
   display: none;
 }
 header .navbar #menu {
-  margin-left: 80px;
+  margin: 0 80px;
 }
 header .navbar #menu li a {
   color: #fff;
@@ -10525,13 +10597,12 @@ header .navbar #social-media #theme form > button img {
     text-align: center;
   }
   header .navbar {
-    padding: 10px 20px;
-  }
-  header .navbar form #dark_mode {
-    display: block;
+    padding: 10px;
   }
   header .navbar #menu {
-    margin-left: 0;
+    text-align: center;
+    border-bottom: 2px solid #f1f3f5;
+    margin: 0;
   }
   header .navbar #menu li a:hover {
     color: #0097e6;
@@ -10541,7 +10612,11 @@ header .navbar #social-media #theme form > button img {
   }
   header .navbar #social-media {
     padding-bottom: 40px;
+    text-align: center;
     margin-top: 20px;
+  }
+  header .navbar #social-media li form {
+    text-align: center;
   }
   header .navbar #social-media li a {
     background-color: none;
@@ -10551,9 +10626,6 @@ header .navbar #social-media #theme form > button img {
   header .navbar #social-media li a:hover {
     color: #0097e6;
     background: none;
-  }
-  header .navbar #social-media li#theme {
-    display: none;
   }
   header .navbar #social-media a, header .navbar #social-media form > button {
     background: none;
@@ -10682,6 +10754,12 @@ header .navbar #social-media #theme form > button img {
   color: #007777;
   font-weight: 500;
 }
+#main #content .item .footer .copy_button:active, #saved #content .item .footer .copy_button:active, #questions #content .item .footer .copy_button:active {
+  transform: translateY(7px);
+}
+#main #content .item .footer .copy_button:active i, #saved #content .item .footer .copy_button:active i, #questions #content .item .footer .copy_button:active i {
+  color: #2ecc71;
+}
 #main #content .item .footer .liked, #main #content .item .footer .saved, #saved #content .item .footer .liked, #saved #content .item .footer .saved, #questions #content .item .footer .liked, #questions #content .item .footer .saved {
   cursor: not-allowed;
   color: #0097e6;
@@ -10764,26 +10842,28 @@ header .navbar #social-media #theme form > button img {
   color: #fff;
   transition: 0.4s ease;
   margin-left: 10px;
-  padding: 1px 20px;
+  padding: 5px 10px;
 }
 #main #content .item #comment .form button:hover, #main #content .item .reponds .form button:hover, #saved #content .item #comment .form button:hover, #saved #content .item .reponds .form button:hover, #questions #content .item #comment .form button:hover, #questions #content .item .reponds .form button:hover {
   color: #004444;
   background-color: #fff;
 }
-#main #content .item .reponds h1, #main #content .item .reponds .h1, #saved #content .item .reponds h1, #saved #content .item .reponds .h1, #questions #content .item .reponds h1, #questions #content .item .reponds .h1 {
+#main #content .item .reponds .head, #saved #content .item .reponds .head, #questions #content .item .reponds .head {
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
-  cursor: pointer;
-  font-size: 1.5rem;
-  font-weight: 600;
-  margin-bottom: 20px;
-  padding: 10px;
-  color: #0097e6;
+  justify-content: space-between;
   border: 2px solid #0097e6;
   background-color: #f1f3f5;
+  padding: 10px;
+  margin-bottom: 20px;
 }
-#main #content .item .reponds h1 span, #main #content .item .reponds .h1 span, #saved #content .item .reponds h1 span, #saved #content .item .reponds .h1 span, #questions #content .item .reponds h1 span, #questions #content .item .reponds .h1 span {
+#main #content .item .reponds .head .copy_button:active, #saved #content .item .reponds .head .copy_button:active, #questions #content .item .reponds .head .copy_button:active {
+  transform: translateY(7px);
+}
+#main #content .item .reponds .head .copy_button:active i, #saved #content .item .reponds .head .copy_button:active i, #questions #content .item .reponds .head .copy_button:active i {
+  color: #2ecc71;
+}
+#main #content .item .reponds .head .length, #saved #content .item .reponds .head .length, #questions #content .item .reponds .head .length {
   padding: 3px 11px 7px 11px;
   background: #0097e6;
   color: #fff;
@@ -10791,9 +10871,18 @@ header .navbar #social-media #theme form > button img {
   font-size: 1.2rem;
   margin-left: 30px;
 }
-#main #content .item .reponds h1 p, #main #content .item .reponds .h1 p, #saved #content .item .reponds h1 p, #saved #content .item .reponds .h1 p, #questions #content .item .reponds h1 p, #questions #content .item .reponds .h1 p {
+#main #content .item .reponds .head h1, #main #content .item .reponds .head .h1, #saved #content .item .reponds .head h1, #saved #content .item .reponds .head .h1, #questions #content .item .reponds .head h1, #questions #content .item .reponds .head .h1 {
+  cursor: pointer;
+  font-size: 1.5rem;
+  font-weight: 600;
+  padding: 10px;
+  color: #0097e6;
+}
+#main #content .item .reponds .head p, #saved #content .item .reponds .head p, #questions #content .item .reponds .head p {
   margin-top: 15px;
-  color: #fff;
+  color: #212529;
+  font-size: 1.4rem;
+  cursor: pointer;
 }
 #main #content .item .reponds li img, #saved #content .item .reponds li img, #questions #content .item .reponds li img {
   width: 200px;
@@ -10814,8 +10903,8 @@ header .navbar #social-media #theme form > button img {
   font-size: 2rem;
   background-color: #0097e6;
   color: #fff;
-  padding: 0 10px;
-  margin-left: 10px;
+  padding: 3.5px 10px;
+  margin: 0 10px;
   transition: 0.4s ease;
   cursor: pointer;
   border: 1px solid #0097e6;
@@ -11055,6 +11144,40 @@ header .navbar #social-media #theme form > button img {
   background-color: #004444;
 }
 
+.footer-dark .contact form {
+  display: flex;
+  align-items: center;
+}
+.footer-dark .contact form input {
+  border-radius: 0;
+  padding: 12px;
+  margin: 10px 0;
+  border: 1px solid #0097e6;
+  transition: 0.4s ease;
+}
+.footer-dark .contact form input:focus {
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+}
+.footer-dark .contact form button {
+  background-color: #0097e6;
+  color: #fff;
+  border: 1px solid #0097e6;
+  transition: 0.4s ease;
+  padding: 8px 14px;
+  font-size: 1.4rem;
+  border-radius: 0;
+}
+.footer-dark .contact form button:hover {
+  background-color: #1864ab;
+}
+.footer-dark .contact form button:focus {
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+}
+
+.footer-dark .link {
+  padding-left: 100px;
+}
+
 .footer-dark h3, .footer-dark .h3 {
   margin-top: 0;
   margin-bottom: 12px;
@@ -11085,6 +11208,16 @@ header .navbar #social-media #theme form > button img {
     text-align: center;
     padding-bottom: 20px;
   }
+  .footer-dark .contact {
+    text-align: center;
+    padding: 5px 50px;
+  }
+  .footer-dark .contact form button {
+    padding: 7px 14px;
+  }
+  .footer-dark .link {
+    display: none;
+  }
 }
 .footer-dark .item.text {
   margin-bottom: 36px;
@@ -11100,37 +11233,9 @@ header .navbar #social-media #theme form > button img {
   margin-bottom: 0;
 }
 
-.footer-dark .item.social {
-  text-align: center;
-}
-
-@media (max-width: 991px) {
-  .footer-dark .item.social {
-    text-align: center;
-    margin-top: 20px;
-  }
-}
-.footer-dark .item.social > a {
-  font-size: 20px;
-  width: 36px;
-  height: 36px;
-  line-height: 36px;
-  display: inline-block;
-  text-align: center;
-  border-radius: 50%;
-  box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.4);
-  margin: 0 8px;
-  color: #fff;
-  opacity: 0.75;
-}
-
-.footer-dark .item.social > a:hover {
-  opacity: 0.9;
-}
-
 .footer-dark .copyright {
   text-align: center;
-  padding-top: 24px;
+  padding-top: 7px;
   opacity: 0.3;
   font-size: 13px;
   margin-bottom: 0;
@@ -11182,6 +11287,9 @@ header .navbar #social-media #theme form > button img {
 }
 #ressources .col-lg-3 ul li a i.fa-youtube {
   color: #dd4b39;
+}
+#ressources .col-lg-3 ul li p {
+  font-size: 1.3rem;
 }
 #ressources .col-lg-4 {
   width: 27.333333%;
@@ -11376,8 +11484,16 @@ body.dark {
   color: #f1f3f5 !important;
 }
 
-#questions.dark .item .reponds h1, #questions.dark .item .reponds .h1 {
+#questions.dark .item .reponds .head {
   background-color: #343a40 !important;
+}
+#questions.dark .item .reponds .head .copy_button {
+  color: #fff !important;
+}
+
+#questions.dark .item .reponds .form form label:hover {
+  background-color: #fff !important;
+  color: #212529 !important;
 }
 
 footer.dark {
@@ -11403,7 +11519,7 @@ footer.dark .card {
 #ressources.dark .col-lg-3 ul li {
   border-bottom: 1px solid #007777 !important;
 }
-#ressources.dark .col-lg-3 ul li a {
+#ressources.dark .col-lg-3 ul li a, #ressources.dark .col-lg-3 ul li p {
   color: #d1ccc0 !important;
 }
 
@@ -11423,19 +11539,19 @@ footer.dark .card {
   background: #fff;
 }
 
-.profile {
+#profile {
   background: #f1f3f5;
   border-bottom: 5px solid #0097e6;
   padding: 0 20px;
   padding-top: 168px;
 }
-.profile .col-lg-4 {
+#profile .col-lg-3 {
   background-color: #004444;
   padding: 20px 0;
   text-align: center;
   min-height: 100%;
 }
-.profile .col-lg-4 .img-circle {
+#profile .col-lg-3 .img-circle {
   text-align: center;
   margin: 0 auto;
   width: 100px;
@@ -11446,39 +11562,38 @@ footer.dark .card {
   font-size: 2.4rem;
   color: #fff;
 }
-.profile .col-lg-4 .info {
-  padding: 10px 64px;
+#profile .col-lg-3 .info {
+  padding: 10px 0;
 }
-.profile .col-lg-4 .info ul li {
+#profile .col-lg-3 .info ul li {
   padding: 10px;
   border-bottom: 1px solid #f1f3f5;
   text-align: center;
   color: #fff;
 }
-.profile .col-lg-4 .info ul li p {
+#profile .col-lg-3 .info ul li p {
   font-weight: 500;
   color: #f1f3f5;
   font-size: 1rem;
 }
-.profile .col-lg-4 .info ul li h3, .profile .col-lg-4 .info ul li .h3 {
+#profile .col-lg-3 .info ul li h3, #profile .col-lg-3 .info ul li .h3 {
   font-size: 1rem;
   font-weight: bold;
 }
-.profile .col-lg-8 {
-  padding: 15px 0;
+#profile .col-lg-9 {
+  padding: 15px 25px;
 }
-.profile .col-lg-8 .saved_posts h1, .profile .col-lg-8 .saved_posts .h1 {
+#profile .col-lg-9 .saved_posts h1, #profile .col-lg-9 .saved_posts .h1 {
   font-size: 2rem;
-  margin: 10px;
   font-weight: bold;
   background-color: #fff;
   padding: 10px;
-  border-radius: 8px;
+  border-radius: 4px;
 }
-.profile .col-lg-8 .saved_posts .row {
+#profile .col-lg-9 .saved_posts .row {
   padding-left: 20px;
 }
-.profile .col-lg-8 .saved_posts .col-4 {
+#profile .col-lg-9 .saved_posts .col-4 {
   background-color: #fff;
   padding: 7px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
@@ -11489,40 +11604,58 @@ footer.dark .card {
   transition: 0.4s ease;
   cursor: pointer;
 }
-.profile .col-lg-8 .saved_posts .col-4:hover {
+#profile .col-lg-9 .saved_posts .col-4:hover {
   background-color: #f1f3f5;
 }
-.profile .col-lg-8 .saved_posts .col-4 .head {
+#profile .col-lg-9 .saved_posts .col-4 .head {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-.profile .col-lg-8 .saved_posts .col-4 .head h2, .profile .col-lg-8 .saved_posts .col-4 .head .h2 {
+#profile .col-lg-9 .saved_posts .col-4 .head h2, #profile .col-lg-9 .saved_posts .col-4 .head .h2 {
   font-size: 1rem;
   margin: 0;
 }
-.profile .col-lg-8 .saved_posts .col-4 .head button {
+#profile .col-lg-9 .saved_posts .col-4 .head button {
   margin: 0 8px;
   font-size: 1.5rem;
   color: #004444;
   transition: 0.4s ease;
 }
-.profile .col-lg-8 .saved_posts .col-4 .head button:hover {
+#profile .col-lg-9 .saved_posts .col-4 .head button:hover {
   transform: scale(1.2);
   color: #0097e6;
 }
-.profile .col-lg-8 .saved_posts .col-4 p {
+#profile .col-lg-9 .saved_posts .col-4 p {
   font-size: 0.8rem;
   margin: 6px 0;
 }
-.profile .col-lg-8 .saved_posts .col-4 img {
+#profile .col-lg-9 .saved_posts .col-4 img {
   margin: 0 auto;
   width: 90%;
   height: auto;
 }
 
+#profile.dark {
+  background-color: #212529 !important;
+}
+#profile.dark .col-lg-9 h1, #profile.dark .col-lg-9 .h1 {
+  background-color: #343a40 !important;
+  color: #fff !important;
+}
+#profile.dark .col-lg-9 .col-4 {
+  background-color: #343a40 !important;
+  color: #fff !important;
+}
+#profile.dark .col-lg-9 .col-4::hover {
+  background-color: #004444 !important;
+}
+#profile.dark .col-lg-9 .col-4 .head button {
+  color: #fff !important;
+}
+
 @media (max-width: 767px) {
-  .profile .col-lg-8 .saved_posts .col-4 {
+  #profile .col-lg-9 .saved_posts .col-4 {
     width: 46.3333%;
   }
 }
